--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-flask>=2.0.0
-gunicorn>=20.1.0
-fastopenapi[flask]>=0.4.0
-pydantic>=2.10.6
+fastapi>=0.115
+jinja2>=3
+uvicorn[standard]>=0.30
+gunicorn>=22
